@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST xfce4-appfinder-4.5.92.tar.bz2 326485 RMD160 838a3a2d09792ab5b428ca38407626b6da531e13 SHA1 92d6e635916fc4e44af45764eb1a507cad22aca7 SHA256 dd47739347b6a00e3a5183cdd21d3fed4b6e9d7a2a171b226ac27c781eeb03d5
+EBUILD xfce4-appfinder-4.5.92.ebuild 587 RMD160 3925539029322a8da8162701613c83643bac93aa SHA1 1892dfea0cd27d416879fac9366219746e63aaeb SHA256 fc954f2fddf3a3e19ef4e31a5ba56d6ff58898a5bc549105b21a788644684bf5
 EBUILD xfce4-appfinder-9999.ebuild 596 RMD160 3013c2252b201ffd5c3da43ce3908cf675a2210d SHA1 ec30ccfd8c9fca854e51d74184f52e22b1e0da61 SHA256 9b169a45647d944ff5cef03d3b29eeb96ceb896ec1e889d12f47efd0a2374e93
-MISC ChangeLog 211 RMD160 ef14cd599f7a60e83b44af18df4f6a9bc414929e SHA1 942a03322160cba915c15e534a192444f6ef73b1 SHA256 5f3f82355a0b6a6810bc5a853e2903d3d7c567ed753d4bc79772c39813edf89e
+MISC ChangeLog 360 RMD160 f4dda78fa52e59b652180719fe9809963b219450 SHA1 904ebca2c9c8645ebf9c8d2d12affda03d6cb68d SHA256 da1c4d0b492108a8dc2aeb81b59cfde4a74013a1a51b978a7c0e2b5f41ff4feb
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFMACgkQKhnDs22gwa+EHgCgp15Urzjz1OOVgANBpQBtu2tP
-kkQAnR+FfFpu7rOwPiSp2vN1ZQ4lAKRw
-=dIV0
+iEYEARECAAYFAkkdtgoACgkQKhnDs22gwa+/CACgzG8YG6KomJp7iVDnoxUkrq2v
+XcAAoNoCk1VHWrlbTX0z0aGRe2JFeNrv
+=PZkb
 -----END PGP SIGNATURE-----
